--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,5 @@
 Add JSON module to src/
-Output canvas markup in JSON format and draw it on screen.
+Output map labels in JSON format and draw them on screen.
 
 Write up database schema plan docs/database.txt.
 Upload XML files to database:
@@ -8,32 +8,24 @@ Upload XML files to database:
     vote data
     election info
 
+Create topologies from the district/Voronoi polygons.
+
 Make Voronoi map visualise real vote data instead of random colours.
 
-Create materialised views for efficient access to the XML data??
-    booths
-    districts
-    candidates
-    votes (first preferences)
-    votes (two-party-preferred)
-
-Figure out URL path structure
+Write up docs on map params:
     bounds
-    zoom level
-    layer identifier
-
-Figure out how many zoom levels you want to have e.g.
-    zoom level 0    320 px = 4000 km
-                      1 px = 12.5 km
-    zoom level 1      1 px =  6.3 km
-    zoom level 2      1 px =  3.1 km
-    zoom level 3      1 px =  1.6 km
-    zoom level 4      1 px =  780 m
-    zoom level 5      1 px =  390 m
-    etc.
-
+    zoom levels
+    layers
 Get main() to call a function that returns different verts depending on bounds, zoom level and layer.
-
 Get JavaScript just to request based on the current zoom level when you press a key.
-
 Turn main() into a CGI script that parses this and returns the verts to the web browser.
+
+Front end: improve two-part transitions.
+    Only do them if you're going from one zoomed-in look to another in a different place.
+    Expand the combined bounds box.
+
+Front end: draw map legend scale (e.g. show a line equal to 5km for reference).
+
+Front end: draw compass.
+    On mobile, tap this to return to a view with north oriented upwards.
+    On desktop, when you press the compass you go into rotation mode. A circle appears in the middle of the screen with the compass directions etched in. Your cursor is on the edge of the compass. A change in the cursor image would be nice. While the mouse is held down, the circle rotates such that the point the cursor was originally on is the closest point on the circle to the cursor position.
