--- a/todo.txt
+++ b/todo.txt
@@ -1,25 +1,8 @@
----
+Bug: Fix the flashing on Firefox on Android.
 
-Stabilise label-maker algorithm:
-    1. Get the screen bounding box in map-space coordinates as four points.
-    2. Make a note of the X and Y domains of these four points. This whole big rectangle becomes our area of focus.
-    3. Decide the grid size---it will be a power of two---based on how many squares of that size we need to cover the rectangle. We want the smallest grid size possible while still covering the rectangle with no more than `resolution` squares.
-    4. In fact, this rectangle---the one made of grid squares, which is most likely slightly larger than the rectangle that envelopes our screen's bounding quad---becomes our real grid of focus. From now on we can turn XY coordinates into an index in the usedSpace buffer by finding `Math.floor(((y-gridRect.y)/numGridRows)*numGridCols + (x-gridRect.x)/numGridCols)`.
-    5. When we go to draw a label:
-       a. Find its bounding box in map-space coordinates. Skip it if it's outside our grid.
-       b. Sort the points of the bounding box by Y. Call the sorted points A, B, C and D.
-       c. Iterate over the grid rows in the Y-range of A, B, C and D.
-          i. To start with, track the lines AB and AC. On each pass, find the X values of these lines. These become our X-range. When we get to the Y value of B, our lines become AC and BD. When we get to the Y value of C, our lines become BD and CD.
-          ii. Turn each square in the grid within the X range into a usedSpace buffer index. If the byte at this index has been set already, cancel the label, set `used = true`.
-       d. If we get this far and `used` is still false, iterate over the grid rows in the same way as before, but this time, set all the bytes in the usedSpace buffer.
-
-Old ideas for label-maker improvements:
-    Fix bug where labels rendered on one side of the screen wrap around and fill boxes in the used-space grid on the other side of the screen.
-    Keep a cached array of labels that you keep referring to each frame unless a dirty flag is set. Set the flag if the map's scale or rotation has changed, or the translation has changed beyond a threshold.
-    To make it appear more stable when zooming/rotating, debounce setting the dirty flag.
-    Get it to keep trying to find room for new labels after failing once but not to keep trying indefinitely. It starts to look weird if we label one tiny electorate in a dense cluster of unlabelled electorates.
-
----
+Front end: draw compass.
+    On mobile, tap this to return to a view with north oriented upwards.
+    On desktop, when you press the compass you go into rotation mode. A circle appears in the middle of the screen with the compass directions etched in. Your cursor is on the edge of the compass. A change in the cursor image would be nice. While the mouse is held down, the circle rotates such that the point the cursor was originally on is the closest point on the circle to the cursor position.
 
 Redo the Voronoi diagram with topological data.
 Finish writing docs/topology.md.
@@ -50,13 +33,17 @@ Front end: improve two-part transitions.
 
 Front end: draw map legend scale (e.g. show a line equal to 5km for reference).
 
-Front end: draw compass.
-    On mobile, tap this to return to a view with north oriented upwards.
-    On desktop, when you press the compass you go into rotation mode. A circle appears in the middle of the screen with the compass directions etched in. Your cursor is on the edge of the compass. A change in the cursor image would be nice. While the mouse is held down, the circle rotates such that the point the cursor was originally on is the closest point on the circle to the cursor position.
-
 Front end: proper FPS counter.
 
 triangulate_polygon():
     Return Triangle_array instead of Path_array. It will be faster and also make more sense because the output of triangulate_polygon doesn't follow the rules for Path structs, namely, repeat the first point in closed rings and make sure the points are in anticlockwise order to define a positive space.
     Identify holes: turn the polygon into one big ring?
     Use spatial hashing to speed it up.
+
+Further label improvements:
+    Get the grid to make use of the screen space efficiently.
+    Get the labels to take up only the grid squares they actually touch, even when the map is rotated.
+    At the moment, our secret (or cheat) to making it look so stable is that the algorithm breaks as soon as it can't find space for one label on the map. It doesn't keep looking. Really we do want it to keep looking and to fill the available space with labels---up to a point: we don't want it to label one small random electorate in a cluster of unlabelled electorates...
+    In fact, what we mainly don't want, I think, is for labels to extend beyond the borders of their electorates. E.g. Eden-Monaro, being a long electorate name, shouldn't appear until it actually fits. Two ways to get this result come to mind: add a bounding box to each label, and add a single value, a width, to each label. In either case you'd only show the label if the width exceeds the map-space width of the text box. So if we can stop electorate labels from exceeding the geographic span of their districts, it might also solve the problem of showing a single electorate in a cluster.
+    Also if we cache the currently-shown labels and rate-limit how often we change this set, we could performance and perceived stability, and even improve the result, because if it's not running every frame we could increase the resolution.
+    Ultimately, the way to get truly great results will be by implementing a label-override system. Each thing being labelled would have an ID. The source code includes, as JSON text, a list of IDs and their corresponding overridden label attributes. Then we implement an editor on the front end that will let us move the labels around and export their current state as JSON. Bingo bango bongo.
