--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,4 @@
 Web server:
-    Add regex-based route matching.
     Parse headers.
 
 Write up database schema plan docs/database.txt.
@@ -45,3 +44,5 @@ Further label improvements:
 Front end: draw compass.
     On mobile, tap this to return to a view with north oriented upwards.
     On desktop, when you press the compass you go into rotation mode. A circle appears in the middle of the screen with the compass directions etched in. Your cursor is on the edge of the compass. A change in the cursor image would be nice. While the mouse is held down, the circle rotates such that the point the cursor was originally on is the closest point on the circle to the cursor position.
+
+copy_string() (and others?) should take optional length params so they don't have to calculate their length unless needed. Optional probably means calling them with -1 for the length argument to say, "These strings are NULL-terminated. Find the length yourself." Add this argument then audit uses of these functions to pass the length if we already know it.
