fix 2 bugs and a leak
bug 1: you can't get the time before poll() and use it after.

bug 2: in a millisecond, there are not a thousand but a million nanoseconds.

leak: don't forget to free the per-request contexts we create.

--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,6 @@
 Web server:
     Parse headers.
+    Don't put the socket back into blocking mode when you write to it. Instead, buffer our reply, poll the socket for POLLOUT and write it a little bit at a time when the socket says we can.
 
 Write up database schema plan docs/database.txt.
 Upload XML files to database:
