--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,3 @@
-Web server:
-    Parse headers.
-    Don't put the socket back into blocking mode when you write to it. Instead, buffer our reply, poll the socket for POLLOUT and write it a little bit at a time when the socket says we can.
-
 Write up database schema plan docs/database.txt.
 Upload XML files to database:
     polling booth info
@@ -46,4 +42,6 @@ Front end: draw compass.
     On mobile, tap this to return to a view with north oriented upwards.
     On desktop, when you press the compass you go into rotation mode. A circle appears in the middle of the screen with the compass directions etched in. Your cursor is on the edge of the compass. A change in the cursor image would be nice. While the mouse is held down, the circle rotates such that the point the cursor was originally on is the closest point on the circle to the cursor position.
 
-copy_string() (and others?) should take optional length params so they don't have to calculate their length unless needed. Optional probably means calling them with -1 for the length argument to say, "These strings are NULL-terminated. Find the length yourself." Add this argument then audit uses of these functions to pass the length if we already know it.
+C framework: copy_string() (and others?) should take optional length params so they don't have to calculate their length unless needed. Optional probably means calling them with -1 for the length argument to say, "These strings are NULL-terminated. Find the length yourself." Add this argument then audit uses of these functions to pass the length if we already know it.
+
+C framework: I can never decide whether to use char or u8 for data. u8 feels better but we can't call print_string() on it. Maybe we could achieve this if we turn print_string() into a macro that calls a function, print_string_((ARRAY)->data, (ARRAY)->count, ...). The first argument is a char *. I think the compiler might be fine with implicitly casting a u8 * to a char * in that case? Or if we have to make it void *, can we assert(sizeof((ARRAY)->data[0]) == sizeof(char))?
